--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     success: true
                 });
             } catch (err) {
-                console.error('複製失敗1:', err);
+                console.error('複製失敗:', err);
                 alert('複製失敗，請手動複製');
 
                 // 記錄複製失敗事件
