--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 data: {
                     url: payload.fcmOptions?.link
                 },
+                renotify: false,
                 tag: 'push-notification',
                 badge: '/FirebasePWA-Test/icon-192x192.png',
                 icon: '/FirebasePWA-Test/icon-192x192.png'
