--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             }
             
             // 其他情況顯示通知
-            const notificationTitle = payload.notification.title;
+            const notificationTitle = payload.notification.title+'前景';
             const notificationOptions = {
                 body: payload.notification.body,
                 data: {
