--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Firebase 推播測試</title>
     <link rel="manifest" href="manifest.json">
+    
     <!-- Firebase SDK -->
     <script type="module">
+        // Import the functions you need from the SDKs you need
+        import {  getToken  } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-messaging.js";
+
+
         // 複製 Token 到剪貼簿
         window.copyToken = async function() {
             const token = document.getElementById('token').textContent;
