--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
     <!-- Firebase SDK -->
     <script type="module">
         // Import the functions you need from the SDKs you need
-        import {  getToken  } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-messaging.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
+        import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-messaging.js";
 
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDZklXfy-QFX2aFxveT-rubiSamhRLL3S4",
+            authDomain: "best777h5.firebaseapp.com",
+            projectId: "best777h5",
+            storageBucket: "best777h5.firebasestorage.app",
+            messagingSenderId: "129060872565",
+            appId: "1:129060872565:web:b81c63bd4a65c8eb73b33c",
+            measurementId: "G-49JKD0RD91"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+
+        const messaging = getMessaging(app);
 
         // 複製 Token 到剪貼簿
         window.copyToken = async function() {
